tests/baselines/reference/scannerNumericLiteral4.errors.txt
scannerNumericLiteral4.ts(1,3): error TS1124: Digit expected.


==== scannerNumericLiteral4.ts (1 errors) ====
    1e
      
!!! error TS1124: Digit expected.